--- a/Bogdan Ryakin/index.html
+++ b/Bogdan Ryakin/index.html
@@ -64,41 +64,21 @@
 				</header>
 				<div class="inner gallery">
 					<div class="row gtr-0">
-						<div class="col-3 col-12-mobile"><a href="images/fulls/01.jpg" class="image fit"><img src="images/thumbs/01.jpg" alt="" title="CSS F1" /></a></div>
-						<div class="col-3 col-12-mobile"><a href="images/fulls/02.jpg" class="image fit"><img src="images/thumbs/02.jpg" alt="" title="CSS F2" /></a></div>
-						<div class="col-3 col-12-mobile"><a href="images/fulls/03.jpg" class="image fit"><img src="images/thumbs/03.jpg" alt="" title="CSS F3" /></a></div>
-						<div class="col-3 col-12-mobile"><a href="images/fulls/04.jpg" class="image fit"><img src="images/thumbs/04.jpg" alt="" title="CSS F4" /></a></div>
+						<div class="col-3 col-12-mobile"><a href="images/fulls/rofl.jpg" class="image fit"><img src="images/thumbs/rofl.jpg" alt="" title="CSS F1" /></a></div>
+						<div class="col-3 col-12-mobile"><a href="images/fulls/rofl.jpg" class="image fit"><img src="images/thumbs/rofl.jpg" alt="" title="CSS F2" /></a></div>
+						<div class="col-3 col-12-mobile"><a href="images/fulls/rofl.jpg" class="image fit"><img src="images/thumbs/rofl.jpg" alt="" title="CSS F3" /></a></div>
+						<div class="col-3 col-12-mobile"><a href="images/fulls/08.jpg" class="image fit"><img src="images/thumbs/rofl.jpg" alt="" title="CSS F4" /></a></div>
 					</div>
 					<div class="row gtr-0">
-						<div class="col-3 col-12-mobile"><a href="images/fulls/05.jpg" class="image fit"><img src="images/thumbs/05.jpg" alt="" title="CSS F5" /></a></div>
-						<div class="col-3 col-12-mobile"><a href="images/fulls/06.jpg" class="image fit"><img src="images/thumbs/06.jpg" alt="" title="CSS F6" /></a></div>
-						<div class="col-3 col-12-mobile"><a href="images/fulls/07.jpg" class="image fit"><img src="images/thumbs/07.jpg" alt="" title="CSS F7" /></a></div>
-						<div class="col-3 col-12-mobile"><a href="images/fulls/08.jpg" class="image fit"><img src="images/thumbs/08.jpg" alt="" title="CSS F8" /></a></div>
+						<div class="col-3 col-12-mobile"><a href="images/fulls/rofl.jpg" class="image fit"><img src="images/thumbs/rofl.jpg" alt="" title="CSS F5" /></a></div>
+						<div class="col-3 col-12-mobile"><a href="images/fulls/rofl.jpg" class="image fit"><img src="images/thumbs/rofl.jpg" alt="" title="CSS F6" /></a></div>
+						<div class="col-3 col-12-mobile"><a href="images/fulls/rofl.jpg" class="image fit"><img src="images/thumbs/rofl.jpg" alt="" title="CSS F7" /></a></div>
+						<div class="col-3 col-12-mobile"><a href="images/fulls/rofl.jpg" class="image fit"><img src="images/thumbs/rofl.jpg" alt="" title="CSS F8" /></a></div>
 					</div>
 				</div>
 			</article>
 
-		<!-- контакты йоу -->
-			<article class="container box style3">
-				<header>
-					<h2>Обратная связь или что-то типа того</h2>
-					<p>похоже, придётся от этого отказаться</p>
-				</header>
-				<form method="post" action="#">
-					<div class="row gtr-50">
-						<div class="col-6 col-12-mobile"><input type="text" class="text" name="name" placeholder="Имя" /></div>
-						<div class="col-6 col-12-mobile"><input type="text" class="text" name="email" placeholder="Электронная почта" /></div>
-						<div class="col-12">
-							<textarea name="message" placeholder="Сообщение"></textarea>
-						</div>
-						<div class="col-12">
-							<ul class="actions">
-								<li><input type="submit" value="Отправить Сообщение" /></li>
-							</ul>
-						</div>
-					</div>
-				</form>
-			</article>
+			
 		<section id="footer">
 			<ul class="icons">
 				<li><a href="https://vk.com/zdravstvyiteblyadi" class="icon brands fa-vk"><span class="label">VK</span></a></li>
