--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html> <!-- Объявление формата документа -->
+<!DOCTYPE html> <!-- Объявление формата документа -->
 <html>
 <head> <!-- Техническая информация о документе -->
     <meta charset="UTF-8"> <!-- Определяем кодировку символов документа -->
