--- a/MokhnatkinDanila/Sayt.html
+++ b/MokhnatkinDanila/Sayt.html
@@ -22,6 +22,7 @@
 	<div class="avatarka">
 	<img src="xexe.jpg">
 	</div>
+	<div class="redacher">
 	<div class="spisok">
 		<ol>
 		<li> <a href="photo/Slyder1.html"> Слайдер </a> </li> 
@@ -42,12 +43,14 @@
 		<li> <h3>Якорные ссылки:</h3> </li>
 		<li> <a href="#anchor">Первая</a> </li>
 		<li> <a href="#anchor2">Вторая</a> </li>
+		<li> <a href="#anchor3">Третья</a> </li>
 		
 		</ol>
 	</div>
 	<div class="down">
 		<h5>Сайт ещё редактируется</h5>
 	</div>
+</div>
 <div id="modal_open" class="my_modal">
   <div class="my_modal-dialog">
     <div class="my_modal-content">
@@ -226,6 +229,32 @@
 		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 		<strong>Кликните <a href="#verhushka">здесь,</a> если хотите вернуться в начало</strong>
+	</div>
+</div>
+<div class="path3">
+	<div id="anchor3">
+		<h2>Третья якорная ссылка</h2>
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<br>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<br>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+		<strong>Кликните <a href="#verhushka">здесь,</a> если хотите вернуться в начало</strong>
+
+
 	</div>
 </div>
     <script type="text/javascript" src="js/Sayt.js"></script>
